fix: change position and z-index of materialReportDialog

--- a/CES.DocManager.WebApi/ClientApp/src/components/ProductTable/ProductTable.style.scss
+++ b/CES.DocManager.WebApi/ClientApp/src/components/ProductTable/ProductTable.style.scss
@@ -12,3 +12,13 @@
     z-index: 10;
   }
 }
+
+.first-row {
+  height: 55px !important;
+
+  .MuiTableCell-root {
+    padding: 14px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
